[gd_scene load_steps=25 format=3 uid="uid://b2kwfbabyr0bm"]

[ext_resource type="Script" uid="uid://bou6clfjfdtgw" path="res://actors/enemies/zenchan/zenchan.gd" id="1_aigf2"]
[ext_resource type="Texture2D" uid="uid://dtj7kwmq1s7nw" path="res://assets/sprites/NES - Bubble Bobble - Enemies & Bosses - Enemies.png" id="1_s72y3"]
[ext_resource type="Script" uid="uid://cxwldrhfsres7" path="res://actors/player/scripts/animation_player.gd" id="2_6hnld"]
[ext_resource type="Script" uid="uid://csxcjsgwddtfm" path="res://actors/enemies/zenchan/Idle.gd" id="4_dne8i"]
[ext_resource type="Script" uid="uid://bjbytyi2fepmq" path="res://actors/player/scripts/StateMachine_Locomotion.gd" id="4_hlciv"]
[ext_resource type="Script" uid="uid://bju7fthcpdhx8" path="res://actors/enemies/zenchan/Running.gd" id="5_fbiw4"]
[ext_resource type="Script" uid="uid://cudtf51fi251h" path="res://actors/enemies/zenchan/falling.gd" id="7_jxh4g"]
[ext_resource type="Script" uid="uid://bfx36clb6wkhh" path="res://actors/enemies/zenchan/Jump_up.gd" id="8_6dyg7"]
[ext_resource type="Script" uid="uid://dhxhusuigbtbb" path="res://actors/enemies/zenchan/Jump_forward.gd" id="9_e7xus"]
[ext_resource type="Script" uid="uid://dwojhok7mmh25" path="res://actors/enemies/zenchan/bubbled.gd" id="10_kdg0o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s72y3"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_i7sgb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(5, 5, 16, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dne8i"]
_data = {
&"RESET": SubResource("Animation_i7sgb")
}

[sub_resource type="Animation" id="Animation_fbiw4"]
resource_name = "FALL"
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(5, 5, 16, 16), Rect2(26, 5, 16, 16)]
}

[sub_resource type="Animation" id="Animation_aigf2"]
resource_name = "IDLE"
length = 0.7000034
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(5, 5, 16, 16), Rect2(26, 5, 16, 16)]
}

[sub_resource type="Animation" id="Animation_6dyg7"]
resource_name = "JUMP_UP"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(26, 5, 16, 16)]
}

[sub_resource type="Animation" id="Animation_s72y3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(5, 5, 16, 16)]
}

[sub_resource type="Animation" id="Animation_j704g"]
length = 0.40000334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(5, 5, 16, 16), Rect2(26, 5, 16, 16)]
}

[sub_resource type="Animation" id="Animation_hlciv"]
resource_name = "Bubbled"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(131, 5, 16, 16), Rect2(152, 5, 16, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i7sgb"]
_data = {
&"BUBBLED": SubResource("Animation_hlciv"),
&"FALL": SubResource("Animation_fbiw4"),
&"IDLE": SubResource("Animation_aigf2"),
&"JUMP_UP": SubResource("Animation_6dyg7"),
&"RESET": SubResource("Animation_s72y3"),
&"RUN": SubResource("Animation_j704g")
}

[sub_resource type="Animation" id="Animation_00q3p"]
length = 0.13333668
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(68, 5, 16, 16)]
}

[sub_resource type="Animation" id="Animation_tqq7e"]
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(47, 5, 16, 16), Rect2(68, 5, 16, 16)]
}

[sub_resource type="Animation" id="Animation_kn3fv"]
length = 0.26667002
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(47, 5, 16, 16), Rect2(68, 5, 16, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytvao"]
_data = {
&"FALL": SubResource("Animation_00q3p"),
&"IDLE": SubResource("Animation_tqq7e"),
&"RUN": SubResource("Animation_kn3fv")
}

[node name="Zenchan" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_aigf2")
DECISION_PERIOD = 0.66
JUMP_VELOCITY = 300.0
MAX_RUN_VELOCITY = 100.0
MAX_RISE_VELOCITY = 400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s72y3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dne8i"),
&"NORMAL": SubResource("AnimationLibrary_i7sgb"),
&"RAGE": SubResource("AnimationLibrary_ytvao")
}
script = ExtResource("2_6hnld")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_s72y3")
region_enabled = true
region_rect = Rect2(5, 5, 16, 16)

[node name="Decision_Timer" type="Timer" parent="."]

[node name="StateMachine_Locomotion" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_hlciv")
initial_state = NodePath("IDLE")

[node name="RUNNING" type="Node" parent="StateMachine_Locomotion"]
script = ExtResource("5_fbiw4")

[node name="IDLE" type="Node" parent="StateMachine_Locomotion"]
script = ExtResource("4_dne8i")

[node name="FALLING" type="Node" parent="StateMachine_Locomotion"]
script = ExtResource("7_jxh4g")

[node name="JUMP_UP" type="Node" parent="StateMachine_Locomotion"]
script = ExtResource("8_6dyg7")

[node name="JUMP_FORWARD" type="Node" parent="StateMachine_Locomotion"]
script = ExtResource("9_e7xus")

[node name="BUBBLED" type="Node" parent="StateMachine_Locomotion"]
script = ExtResource("10_kdg0o")

[node name="Sensors" type="Node2D" parent="."]

[node name="Wall_front" type="RayCast2D" parent="Sensors"]
target_position = Vector2(10, 0)

[node name="Floor_above" type="RayCast2D" parent="Sensors"]
position = Vector2(0, -7)
target_position = Vector2(0, -34)

[node name="Floor_front" type="RayCast2D" parent="Sensors"]
position = Vector2(10, 0)
target_position = Vector2(0, 15)
